2003-03-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.7.15 released
	
	* Documentation/user/lilypond.tely: omf updates.

	* buildscripts/texi2omf.py (omf_vars): include version.date

	* make/lilypond.redhat.spec.in: fixes for spec file. 

	* stepmake/stepmake/texinfo-vars.make (GENERATE_OMF):  replace var
	by function definition: lily now requires a recent GNU Make.

	* scripts/lilypond-book.py (write_deps): remove .tex dependency writing.

	* make/ly-rules.make: remove .ly -> .tex rule

	* Documentation/user/refman.itely (Figured bass): revised figured
	bass example.

2003-03-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* stepmake/stepmake/omf-targets.make (local-install): add
	scrollkeeper-update message.

	* scripts/lilypond-book.py (lilypond_binary): explicity add path to binary.
	(TexiPaper.process_ly2dvi_block): idem for ly2dvi

	* scripts/ly2dvi.py (lilypond_binary): explicity add path to binary.

	* Documentation/user/converters.itely (Invoking midi2ly): add
	track/channel notice.

2003-03-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* stepmake/stepmake/omf-targets.make (omf-local-install): bugfixes

	* lily/parser.yy (scalar): DIGIT is also a scalar.

	* Documentation/user/music-glossary.tely: add @omf tags

	* Documentation/user/lilypond.tely: add @omf tags

	* scm/generate-documentation.scm (string-append): add @omf tags.

	* stepmake/stepmake/omf-*: new files 

	* input/regression/multi-measure-rest.ly (texidoc): add doco

	* GNUmakefile.in (web-doc-install): add web-doc-install target

	* lily/scm-hash.cc (remove): prevent underflow of elt_count_. This
	fixes crashes while dumping MIDI.

	* ly/performer-init.ly (FiguredBassContext): add Figured bass for
	midi

2003-03-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* buildscripts/texi2omf.py: new file.

	* mf/feta-beugel.mf: include font count, not staffsize (16) in
	font-name

2003-03-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/beam-manual-beaming.ly (texidoc): new file.
